[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloom-filter"
version = "0.1.0"
description = "Bloom filter implementation in Python"
requires-python = ">=3.12"
dependencies = [
    "bitarray>=3.8.0",
    "mmh3>=5.2.0",
    "xxhash>=3.6.0",
]
readme = "README.md"
license = { text = "GNU General Public License v3.0" }
authors = [
    { name = "Nick Newson", email = "nick.newson@example.com" }
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
