[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bloom_filter_nnewson"
version = "0.1.0"
description = "Bloom filter implementation in Python"
requires-python = ">=3.12"
dependencies = [
    "bitarray>=3.8.0",
    "mmh3>=5.2.0",
    "xxhash>=3.6.0",
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Nick Newson", email = "nick.newson@example.com" }
]

[project.urls]
Homepage = "https://github.com/nnewson/DSA/tree/main/bloomFilter"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
